2006-03-08  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_init): Handle fopen failure.
	(utf8_to_ppd_encoding): Nul-terminate the string.
	(Option_getseters) Better docstring for conflicted attribute.

2006-03-07  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.h (PPD struct): New members for encoding conversion.
	* cupsppd.c (PPD_new): Initialise encoding conversion members in
	PPD struct.
	(PPD_init): Likewise.
	(PPD_dealloc): Deallocate encoding conversion handles.
	(ppd_encoding_is_utf8): New function.
	(make_PyUnicode_from_ppd_string): New function.
	(utf8_to_ppd_encoding): New function.
	(Option_getKeyword): Convert to Unicode.
	(Option_getDefchoice): Likewise.
	(Option_getText): Likewise.
	(Option_getChoices): Likewise.
	(Group_getText): Likewise.
	(Group_getName): Likewise.
	(Constraint_getOption1): Likewise.
	(Constraint_getChoice1): Likewise.
	(Constraint_getOption2): Likewise.
	(Constraint_getChoice2): Likewise.
	(PPD_markOption): Convert to PPD encoding.

2006-03-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.2.

2006-03-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (do_printer_request): Watch out for exceptions
	from the password callback.
	(Connection_addPrinter): Likewise.
	(Connection_setPrinterDevice): Likewise.
	(Connection_setPrinterInfo): Likewise.
	(Connection_setPrinterLocation): Likewise.
	(Connection_setPrinterPublished): Likewise.
	(Connection_setPrinterJobSheets): Likewise.
	(Connection_setPrinterErrorPolicy): Likewise.
	(Connection_setPrinterOpPolicy): Likewise.
	(Connection_addPrinterToClass): Likewise.
	(Connection_deletePrinterFromClass): Likewise.

2006-03-01  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (set_ipp_error): Use ippErrorString().
	(Connection_getPrinters): Fixed typo.

	* cupsmodule.c (initcups): IPP error codes.

	* cupsppd.c (PPD_writeFd): Treat PageRegion specially, like CUPS
	does.
	(nondefaults_are_marked): New function.
	(PPD_nondefaultsMarked): Implemented.
