@@ -335,11 +335,10 @@ initcups (void)
   INT_CONSTANT (CUPS_PRINTER_DEFAULT);
   INT_CONSTANT (CUPS_PRINTER_FAX);
   INT_CONSTANT (CUPS_PRINTER_REJECTING);
-#ifdef HAVE_CUPS_1_2
   INT_CONSTANT (CUPS_PRINTER_DELETE);
   INT_CONSTANT (CUPS_PRINTER_NOT_SHARED);
   INT_CONSTANT (CUPS_PRINTER_AUTHENTICATED);
-#endif /* HAVE_CUPS_1_2 */
+  INT_CONSTANT (CUPS_PRINTER_COMMANDS);
   INT_CONSTANT (CUPS_PRINTER_OPTIONS);
 
   // HTTP encryption
@@ -366,9 +365,7 @@ initcups (void)
   INT_CONSTANT (IPP_OK_IGNORED_NOTIFICATIONS);
   INT_CONSTANT (IPP_OK_TOO_MANY_EVENTS);
   INT_CONSTANT (IPP_OK_BUT_CANCEL_SUBSCRIPTION);
-#ifdef HAVE_CUPS_1_2
   INT_CONSTANT (IPP_OK_EVENTS_COMPLETE);
-#endif /* HAVE_CUPS_1_2 */
   INT_CONSTANT (IPP_REDIRECTION_OTHER_SITE);
   INT_CONSTANT (IPP_BAD_REQUEST);
   INT_CONSTANT (IPP_FORBIDDEN);
