@@ -32,6 +32,13 @@
 #define CUPS_ADD_MODIFY_PRINTER CUPS_ADD_PRINTER
 #define CUPS_ADD_MODIFY_CLASS CUPS_ADD_CLASS
 
+#define CUPS_PRINTER_DELETE 0x100000
+#define CUPS_PRINTER_NOT_SHARED 0x200000
+#define CUPS_PRINTER_AUTHENTICATED 0x400000
+#define CUPS_PRINTER_COMMANDS 0x800000
+
+#define IPP_OK_EVENTS_COMPLETE 7
+
 static ipp_t *
 ippNewRequest (ipp_op_t op)
 {
